--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -106,14 +106,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I. Algorithms"
+    "# 1. Algorithms"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I.1. SDCA Implementation"
+    "## 1.1. SDCA Implementation"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I.2. Pegasos implementation"
+    "## 1.2. Pegasos implementation"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## I.3. Accelerated mini-batch SDCA (ASDCA) implementation\n",
+    " ## 1.3. Accelerated mini-batch SDCA (ASDCA) implementation\n",
     "For accelerated mini-batch SDCA, the smooth version of the hinge loss is used."
    ]
   },
@@ -382,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I.4. Mini-batch Pegasos implementation"
+    "## 1.4. Mini-batch Pegasos implementation"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# II. Application: Simulated data\n",
+    "# 2. Application: Simulated data\n",
     "We now apply those algorithms on simulated data: 1000 observations with 100 features."
    ]
   },
@@ -486,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II.1. SDCA"
+    "## 2.1. SDCA"
    ]
   },
   {
@@ -579,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II.2. PEGASOS"
+    "## 2.2. PEGASOS"
    ]
   },
   {
@@ -665,7 +665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II.3. Accelerated mini-batch SDCA"
+    "## 2.3. Accelerated mini-batch SDCA"
    ]
   },
   {
@@ -742,7 +742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II.4. Mini-batch PEGASOS"
+    "## 2.4. Mini-batch PEGASOS"
    ]
   },
   {
@@ -828,7 +828,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II.5. Results comparison"
+    "## 2.5. Results comparison"
    ]
   },
   {
@@ -864,7 +864,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# III. Application: Credit Fraud detection (highly unbalanced dataset)"
+    "# 3. Application: Credit Fraud detection (highly unbalanced dataset)"
    ]
   },
   {
@@ -1332,7 +1332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III.1. SDCA"
+    "## 3.1. SDCA"
    ]
   },
   {
@@ -1390,7 +1390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III.2. PEGASOS"
+    "## 3.2. PEGASOS"
    ]
   },
   {
@@ -1445,7 +1445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III.3. Accelerated mini-batch SDCA (ASDCA)"
+    "## 3.3. Accelerated mini-batch SDCA (ASDCA)"
    ]
   },
   {
@@ -1496,7 +1496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III.4. Mini-batch PEGASOS"
+    "## 3.4. Mini-batch PEGASOS"
    ]
   },
   {
@@ -1551,7 +1551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III.5. Comparison"
+    "## 3.5. Comparison"
    ]
   },
   {
@@ -1585,7 +1585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III.6 Accuracy"
+    "## 3.6 Accuracy"
    ]
   },
   {
