--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1. SDCA Implementation"
+    "## 1.1. SDCA"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2. Pegasos implementation"
+    "## 1.2. Pegasos"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## 1.3. Accelerated mini-batch SDCA (ASDCA) implementation\n",
+    " ## 1.3. Accelerated mini-batch SDCA (ASDCA)\n",
     "For accelerated mini-batch SDCA, the smooth version of the hinge loss is used."
    ]
   },
@@ -382,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.4. Mini-batch Pegasos implementation"
+    "## 1.4. Mini-batch Pegasos"
    ]
   },
   {
